<resources>
    <string name="app_name">memoryGame</string>
    <string name="action_settings">Settings</string>
    <string name="START">CARDS</string>
    <string name="START1">YU-GY-OH</string>
    <string name="START3">P  L   A  Y</string>
    <string name="START4">YU-GI-OH</string>
    <string name="QUIT">QUIT</string>
    <string name="HARD">SAVANNA</string>
    <string name="MEDIUM">YU-GY-OH</string>
    <string name="EASY">CARDS</string>
    <string name="tryAGAIN">try again</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="congratulations_game_complete">CONGRATULATIONS \n GAME COMPLETE</string>

</resources>
